--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "hardhat": "^2.22.15"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "@nomicfoundation/hardhat-viem": "^2.0.5",
+    "dotenv": "^16.4.5",
+    "viem": "^2.21.45"
   }
 }
